# chessstudy

./: .gitattributes  .gitignore  AGENTS.md  TASKS.md  eslint.config.js  index.html  opencode.json  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
.serena/: project.yml
docs/: chesscom-archive-api.json  chesscom-games-api.json  lichess-api.json
docs/adr/: 0001-stockfish-in-browser.md  0002-tauri-native-sf-llm.md  0003-openrouter-llm.md  0004-local-open-source-llm.md  0005-analisi-stockfish-adattiva.md  0006-dexie-database-locale-profili-backup.md
docs/specs/: FEAT-001-chessboard-lesson.md  FEAT-004-pgn-import-stockfish.md  FEAT-005-explain-service.md  TAURI-002-native-stockfish.md  TAURI-003-local-llm.md  ai-comment-refactor.md  analisi-aperture.md  board-flip.md  card-lezioni-homepage.md  check-king-highlight.md  chessground-board.md  commenti-educativi-tattici.md  conferma-conversione-analisi-studio.md  coordinate-scacchiera.md  dark-theme.md  database-locale-profili-backup.md  error-handling-visibile.md  eslint-flat-config.md  eval-bar-coach-comments.md  grafico-andamento-partita.md  import-lichess-player-games.md  indicatori-commenti-mosse.md  keyboard-move-navigation.md  last-move-origin-highlight.md  lesson-3col-layout.md  lesson-ai-summary.md  local-open-source-llm.md  miglioramenti-scacchiera-studio.md  (+16 more)
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  commentary.rs  lib.rs  llm.rs  settings.rs  stockfish.rs
(+93 files in other folders)
