[package]
name = "chessstudy"
version = "1.0.0"
description = "App per studiare scacchi: lezioni, scacchiere, mosse, varianti e commenti."
authors = ["arcy"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "fs"] }
anyhow = "1"
encoding_rs = "0.8"
llama-cpp-2 = "0.1.150"
